// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extensions.tx (provider=cockroachdb) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.tx (provider=cockroachdb) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.tx (provider=mongodb) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`extensions.tx (provider=mongodb) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`extensions.tx (provider=mysql) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`extensions.tx (provider=mysql) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`extensions.tx (provider=mysql, js_planetscale) extended client in tx can rollback via custom call 1`] = `target: test-0000-00000000.0.primary: vttablet: rpc error: code = AlreadyExists desc = Duplicate entry 'jane@smith.com' for key 'User.User_email_key' (errno 1062) (sqlstate 23000) (CallerID: userData1): Sql: "insert into \`User\`(id, email, firstName, lastName) values (:vtg1 /* VARCHAR */, :vtg2 /* VARCHAR */, :vtg3 /* VARCHAR */, :vtg4 /* VARCHAR */)", BindVars: {vtg1: "type:VARCHAR value:\\"a85d5d75a3a886cb61eb3a0e\\""vtg2: "type:VARCHAR value:\\"jane@smith.com\\""vtg3: "type:VARCHAR value:\\"Jane\\""vtg4: "type:VARCHAR value:\\"Smith\\""} (errno 1062) (sqlstate 23000) during query: INSERT INTO \`test-0000-00000000\`.\`User\` (\`id\`,\`email\`,\`firstName\`,\`lastName\`) VALUES ('a85d5d75a3a886cb61eb3a0e','jane@smith.com','Jane','Smith')`;

exports[`extensions.tx (provider=mysql, js_planetscale) extended client in tx can rollback via normal call 1`] = `target: test-0000-00000000.0.primary: vttablet: rpc error: code = AlreadyExists desc = Duplicate entry 'jane@smith.com' for key 'User.User_email_key' (errno 1062) (sqlstate 23000) (CallerID: userData1): Sql: "insert into \`User\`(id, email, firstName, lastName) values (:vtg1 /* VARCHAR */, :vtg2 /* VARCHAR */, :vtg3 /* VARCHAR */, :vtg4 /* VARCHAR */)", BindVars: {vtg1: "type:VARCHAR value:\\"a85d5d75a3a886cb61eb3a0e\\""vtg2: "type:VARCHAR value:\\"jane@smith.com\\""vtg3: "type:VARCHAR value:\\"Jane\\""vtg4: "type:VARCHAR value:\\"Smith\\""} (errno 1062) (sqlstate 23000) during query: INSERT INTO \`test-0000-00000000\`.\`User\` (\`id\`,\`email\`,\`firstName\`,\`lastName\`) VALUES ('a85d5d75a3a886cb61eb3a0e','jane@smith.com','Jane','Smith')`;

exports[`extensions.tx (provider=postgresql) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.tx (provider=postgresql) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.tx (provider=postgresql, js_neon) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.tx (provider=postgresql, js_neon) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.tx (provider=postgresql, js_pg) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


duplicate key value violates unique constraint "User_email_key"
`;

exports[`extensions.tx (provider=postgresql, js_pg) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX })
  XX 
  XX const result = xprisma.$transaction([
→ XX   xprisma.user.create(
duplicate key value violates unique constraint "User_email_key"
`;

exports[`extensions.tx (provider=sqlite) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.tx (provider=sqlite) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.tx (provider=sqlserver) extended client in tx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`dbo.User\`
`;

exports[`extensions.tx (provider=sqlserver) extended client in tx can rollback via normal call 1`] = `

Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the constraint: \`dbo.User\`
`;
